# spimex_parser

./: README.md  pyproject.toml  setup.cfg
new/: db.py  file_downloader.py  link_collector.py  main.py  model.py  xls_parser.py
spimex_parser/: db.py  file_downloader.py  link_collector.py  link_generator.py  main.py  model.py  setings.py  xls_parser.py
