[tool.poetry]
name = "spimex-parser"
version = "0.1.0"
description = ""
authors = ["sergey-royt <goodstop687@gmail.com>"]
readme = "README.md"
packages = [{include = "spimex_parser"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.10"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
xlrd = "^2.0.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
